src/test/deca/context/valid/test_printlnx.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{
        printlnx("Hello, world!");
        printlnx(12);
        printlnx(12.34);
}
