src/test/deca/context/invalid/test_while_int.deca
// Description:
//    programme avec while.
//
// Resultats:
//    ligne 12 : Votre condition doit etre de type boolean
//
// Historique:
//    cree le 01/01/2024

{
int x = 2;
while(x){
    print("valid");
}
}
